--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.1.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-select": "^5.5.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
