--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "react-select": "^5.5.7"
   },
   "devDependencies": {
