--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
-    "react-select": "^5.5.7"
+    "react-select": "^5.5.7",
+    "react-speech-kit": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
