--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.1.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0",
-    "react-select": "^5.5.7",
-    "react-speech-kit": "^3.0.1"
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
